SFUSA/force-app/main/default/objects/Opportunity/fields/Account_External_Id_Aperity__c.field-meta.xml
<CustomField>
        <fullName>Account_External_Id_Aperity__c</fullName>
        <externalId>true</externalId>
        <label>Account External Id Aperity</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>