SFUSA/force-app/main/default/objects/Opportunity/fields/ActualBottlesofFirstFulfillment__c.field-meta.xml
<CustomField>
        <fullName>ActualBottlesofFirstFulfillment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Bottles of First Fulfillment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>