SFUSA/force-app/main/default/objects/Opportunity/fields/Bottle_Size__c.field-meta.xml
<CustomField>
        <fullName>Bottle_Size__c</fullName>
        <label>Bottle Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50 ML</fullName>
                </value>
                <value>
                    <fullName>100 ML</fullName>
                </value>
                <value>
                    <fullName>200 ML</fullName>
                </value>
                <value>
                    <fullName>375 ML</fullName>
                </value>
                <value>
                    <fullName>750 ML</fullName>
                </value>
                <value>
                    <fullName>1 L</fullName>
                </value>
                <value>
                    <fullName>1.75 L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>