SFUSA/force-app/main/default/objects/Opportunity/fields/BrandLevelLLDescription__c.field-meta.xml
<CustomField>
        <fullName>BrandLevelLLDescription__c</fullName>
        <label>Brand Level LL Description - DELETE?</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>