SFUSA/force-app/main/default/objects/Opportunity/fields/BrandLevelLLKey__c.field-meta.xml
<CustomField>
        <fullName>BrandLevelLLKey__c</fullName>
        <label>Brand Level LL Key</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>