SFUSA/force-app/main/default/objects/Opportunity/fields/ClusterDescription__c.field-meta.xml
<CustomField>
        <fullName>ClusterDescription__c</fullName>
        <label>Cluster Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>