SFUSA/force-app/main/default/objects/Opportunity/fields/External_Id__c.field-meta.xml
<CustomField>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>