SFUSA/force-app/main/default/objects/Opportunity/fields/FocusBrandTypes__c.field-meta.xml
<CustomField>
        <fullName>FocusBrandTypes__c</fullName>
        <label>Focus Brand Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pillar Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>