SFUSA/force-app/main/default/objects/Opportunity/fields/Fulfilled__c.field-meta.xml
<CustomField>
        <fullName>Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfilled</label>
        <type>Checkbox</type>
    </CustomField>