SFUSA/force-app/main/default/objects/Opportunity/fields/SimilarTotalAllClusterEQ__c.field-meta.xml
<CustomField>
        <fullName>SimilarTotalAllClusterEQ__c</fullName>
        <label>Similar - Total All Cluster EQ</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>