SFUSA/force-app/main/default/objects/Opportunity/fields/SimilarTotalAllClusterPlacements__c.field-meta.xml
<CustomField>
        <fullName>SimilarTotalAllClusterPlacements__c</fullName>
        <label>Similar - Total All Cluster Placements</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>