SFUSA/force-app/main/default/objects/Opportunity/fields/SimilarTotalPHY__c.field-meta.xml
<CustomField>
        <fullName>SimilarTotalPHY__c</fullName>
        <description>Number of physical case placements for this Brand Variety in similar stores.</description>
        <inlineHelpText>Number of physical case placements for this Brand Variety in similar stores.</inlineHelpText>
        <label>Similar - Total PHY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>