SFUSA/force-app/main/default/objects/Opportunity/fields/SimilarTotalPlacements__c.field-meta.xml
<CustomField>
        <fullName>SimilarTotalPlacements__c</fullName>
        <description>Number of total 9L placements for this Brand Variety in similar stores.</description>
        <inlineHelpText>Number of total 9L placements for this Brand Variety in similar stores.</inlineHelpText>
        <label>Similar - Total Placements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>