SFUSA/force-app/main/default/objects/Opportunity/fields/Size__c.field-meta.xml
<CustomField>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>