SFUSA/force-app/main/default/objects/Opportunity/fields/SizeKey__c.field-meta.xml
<CustomField>
        <fullName>SizeKey__c</fullName>
        <label>Size Key</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>