SFUSA/force-app/main/default/objects/Opportunity/fields/SourceKey__c.field-meta.xml
<CustomField>
        <fullName>SourceKey__c</fullName>
        <label>Source Key</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>