SFUSA/force-app/main/default/objects/Opportunity/fields/StageLastModified__c.field-meta.xml
<CustomField>
        <fullName>StageLastModified__c</fullName>
        <label>Stage Last Modified</label>
        <type>Date</type>
    </CustomField>