SFUSA/force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>