SFUSA/force-app/main/default/objects/Opportunity/fields/StatusKey__c.field-meta.xml
<CustomField>
        <fullName>StatusKey__c</fullName>
        <label>Status Key</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>