SFUSA/force-app/main/default/objects/Opportunity/fields/StoreAllClusterMO12EQLY__c.field-meta.xml
<CustomField>
        <fullName>StoreAllClusterMO12EQLY__c</fullName>
        <label>Store All Cluster MO 12 EQ LY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>