SFUSA/force-app/main/default/objects/Opportunity/fields/TypeKey__c.field-meta.xml
<CustomField>
        <fullName>TypeKey__c</fullName>
        <label>Type Key</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>