SFUSA/force-app/main/default/objects/Opportunity/recordTypes/Aperity_Driven.recordType-meta.xml
<RecordType>
        <fullName>Aperity_Driven</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <description>Distribution opportunities generated by Aperity</description>
        <label>Aperity Driven</label>
        
    </RecordType>