SFUSA/force-app/main/default/objects/Opportunity/recordTypes/Beam_Driven.recordType-meta.xml
<RecordType>
        <fullName>Beam_Driven</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <description>Distribution opportunities created by field reps</description>
        <label>Beam Driven</label>
        
    </RecordType>