SFUSA/force-app/main/default/objects/Opportunity/recordTypes/Beam_Driven_Create_Only.recordType-meta.xml
<RecordType>
        <fullName>Beam_Driven_Create_Only</fullName>
        <active>true</active>
        <businessProcess>Rep Created</businessProcess>
        <description>Used for creation of rep-created distribution opportunities</description>
        <label>Beam Driven - Create Only</label>
        
    </RecordType>