SFUSA/force-app/main/default/objects/Opportunity/listViews/AllOpenOpportunities.listView-meta.xml
<ListView>
        <fullName>AllOpenOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Open - Aperity Provided</value>
        </filters>
        <label>All Open Opportunities</label>
    </ListView>