SFUSA/force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </ListView>