SFUSA/force-app/main/default/objects/Opportunity/listViews/MyLostOpportunities.listView-meta.xml
<ListView>
        <fullName>MyLostOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed - Lost Opportunity</value>
        </filters>
        <label>My Lost Opportunities</label>
    </ListView>